--- a/templates/back/base.html.twig
+++ b/templates/back/base.html.twig
@@ -278,14 +278,14 @@
 			<script src="{{ asset('back/js/plugins/perfect-scrollbar.min.js') }}"></script>
 			<script src="{{ asset('back/js/plugins/smooth-scrollbar.min.js') }}"></script>
 			<script src="{{ asset('back/js/plugins/chartjs.min.js') }}"></script>
-			<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+			{# <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 			<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 			<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 			<script>
 				$(function () {
 $(".datepicker").datepicker();
 });
-			</script>
+			</script> #}
 
 
 			<script>
