--- a/templates/back/offer/edit.html.twig
+++ b/templates/back/offer/edit.html.twig
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
 
-<title>Edit Offer</title>
-
+{% extends 'back/base.html.twig' %}
+{% block title %}
+   Edit Your Offer
+{% endblock %}
 {% block body %}
-    <h1>Edit Offer</h1>
+     <h1 style="font-size: 2.5rem; font-weight: bold; text-align: center; color: white;">Update your SKILL Offer</h1>
 
     {{ include('offer/_form.html.twig', {'button_label': 'Update'}) }}
 
