--- a/templates/back/offer/index.html.twig
+++ b/templates/back/offer/index.html.twig
@@ -3,38 +3,48 @@
 <title>Offer index</title>
 
 {% block body %}
-    <h1>Offer index</h1>
+	<h1>Offer index</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Description</th>
-                <th>CreatedAt</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for offer in offers %}
-            <tr>
-                <td>{{ offer.id }}</td>
-                <td>{{ offer.title }}</td>
-                <td>{{ offer.description }}</td>
-                <td>{{ offer.CreatedAt ? offer.CreatedAt|date('Y-m-d') : '' }}</td>
-                <td>
-                    <a href="{{ path('app_offer_show', {'id': offer.id}) }}">show</a>
-                    <a href="{{ path('app_offer_edit', {'id': offer.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+	<table class="table">
+		<thead>
+			<tr>
+				<th>Id</th>
+				<th>Title</th>
+				<th>Description</th>
+				<th>Author</th>
+				<th>Creation Date</th>
+				<th>Type</th>
+				<th>Motive</th>
+				<th>Location</th>
+				<th>Status</th>
+				<th>actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for offer in offers %}
+				<tr>
+					<td>{{ offer.id }}</td>
+					<td>{{ offer.title }}</td>
+					<td>{{ offer.description }}</td>
+					<td>{{ offer.author }}</td>
+					<td>{{ offer.CreatedAt ? offer.CreatedAt|date('Y-m-d') : '' }}</td>
+					<td>{{ offer.type }}</td>
+					<td>{{ offer.motive }}</td>
+					<td>{{ offer.location }}</td>
+					<td>{{ offer.status }}</td>
+					<td>
+						<a href="{{ path('app_offer_edit', {'id': offer.id}) }}">edit</a>
+						<a href="{{ path('app_offer_delete', {'id': offer.id}) }}">delete</a>
+						{# <a>Publish</a> #}
+					</td>
+				</tr>
+			{% else %}
+				<tr>
+					<td colspan="5">no records found</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 
-    <a href="{{ path('app_offer_new') }}">Create new</a>
+	<a href="{{ path('app_offer_new') }}">Create new Offer</a>
 {% endblock %}
-
