Update Asserts and twigs

--- a/templates/back/base.html.twig
+++ b/templates/back/base.html.twig
@@ -20,24 +20,24 @@
 		href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700'" rel="stylesheet"/>
 		<!-- Nucleo Icons -->
 		<link href="{{ asset('back/css/nucleo-icons.css') }}" rel="stylesheet"/>
-    <style>
-    /* Custom styles for the datepicker input */
-    .datepicker {
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-    }
+		<style>
+			/* Custom styles for the datepicker input */
+			.datepicker {
+				border-top-right-radius: 0;
+				border-bottom-right-radius: 0;
+			}
 
-    /* Custom styles for the calendar icon */
-    .input-group-text i.fa-calendar {
-        color: #6c757d; /* Adjust color as needed */
-    }
+			/* Custom styles for the calendar icon */
+			.input-group-text i.fa-calendar {
+				color: #6c757d; /* Adjust color as needed */
+			}
 
-    /* Custom styles for the current date */
-    .ui-datepicker-current-day {
-        background-color: #ffc0cb; /* Light pink */
-        color: #fff; /* White text */
-    }
-</style>
+			/* Custom styles for the current date */
+			.ui-datepicker-current-day {
+				background-color: #ffc0cb; /* Light pink */
+				color: #fff; /* White text */
+			}
+		</style>
 		<link
 		href="{{ asset('back/css/nucleo-svg.css') }}" rel="stylesheet"/>
 		<!-- Font Awesome Icons -->
@@ -70,10 +70,10 @@
 							</a>
 							<ul class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdown">
 								<li>
-									<a class="dropdown-item" href="./add_offer.html">Add Offer</a>
+									<a class="dropdown-item" href="./back/offer/new.html.twig">Add Offer</a>
 								</li>
 								<li>
-									<a class="dropdown-item" href="./view_offers.html">Offer List</a>
+									<a class="dropdown-item" href="./back/offer/index.html.twig">Offer List</a>
 								</li>
 							</ul>
 						</li>
@@ -202,10 +202,10 @@
 										<script>
 											document.write(new Date().getFullYear())
 										</script>,
-																																																																						                made with
+																																																																																																				                made with
 										<i class="fa fa-heart"></i>
 										by NOVACODERS 3A39
-																																																																						                for Project Integration Unit.
+																																																																																																				                for Project Integration Unit.
 									</div>
 								</div>
 								<div class="col-lg-6">
@@ -279,13 +279,13 @@
 			<script src="{{ asset('back/js/plugins/smooth-scrollbar.min.js') }}"></script>
 			<script src="{{ asset('back/js/plugins/chartjs.min.js') }}"></script>
 			{# <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-			<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-			<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-			<script>
-				$(function () {
-$(".datepicker").datepicker();
-});
-			</script> #}
+												<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+												<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+												<script>
+													$(function () {
+									$(".datepicker").datepicker();
+									});
+												</script> #}
 
 
 			<script>
