--- a/templates/back/offer/edit.html.twig
+++ b/templates/back/offer/edit.html.twig
@@ -1,14 +1,14 @@
-
 {% extends 'back/base.html.twig' %}
+
 {% block title %}
-   Edit Your Offer
+    Edit Offer
 {% endblock %}
+
 {% block body %}
-     <h1 style="font-size: 2.5rem; font-weight: bold; text-align: center; color: white;">Update your SKILL Offer</h1>
+    <h1 style="font-size: 2.5rem; font-weight: bold; text-align: center; color: white;">Edit Your SKILL Offer</h1>
 
-    {{ include('offer/_form.html.twig', {'button_label': 'Update'}) }}
-
+    {{ include('back/offer/_form.html.twig') }}
     <a href="{{ path('app_offer_index') }}">back to list</a>
-
-    {{ include('offer/_delete_form.html.twig') }}
+    {# <script src="{{'https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js' }}"></script>
+    <script src="{{ asset('js/skills.js') }}"></script> #}
 {% endblock %}
