--- a/templates/back/offer/_form.html.twig
+++ b/templates/back/offer/_form.html.twig
@@ -80,7 +80,7 @@
 
 <div class="form-group">
 	{{ form_label(form.status, 'Status', {'label_attr': {'class': 'font-weight-bold'}}) }}
-	{{ form_widget(form.status, {'attr': {'class': 'form-control'}, 'placeholder': 'Select status'}) }}
+	{{ form_widget(form.status, {'attr': {'class': 'form-control'}}) }}
 	{% if form_errors(form.status) %}
 		<div style="background-color: #f8d7da; color: #721c24; border-color: #f5c6cb; border-radius: 10px; display: flex; align-items: center;">
 			<i class="fa fa-exclamation-triangle"></i>
