--- a/templates/back/offer/index.html.twig
+++ b/templates/back/offer/index.html.twig
@@ -5,45 +5,50 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="text-center mb-4">Offer Index</h1>
+	<h1 style="font-size: 2.5rem; font-weight: bold; text-align: center; color: white; margin-bottom: 60px;">SKILL SEEKR OFFERS</h1>
 
 	<div class="table-responsive">
-		<table class="table table-bordered table-hover" style="background-color: rgba(173, 216, 230, 0.8); border-color: #5e94b1;">
+		<table class="table table-bordered table-hover" style="background-color: rgba(173, 216, 230, 0.8); border-color: #4682b4;">
 			<thead class="bg-light">
 				<tr>
-					<th scope="col" class="text-center">Id</th>
-					<th scope="col" class="text-center">Title</th>
-					<th scope="col" class="text-center">Description</th>
-					<th scope="col" class="text-center">Author</th>
-					<th scope="col" class="text-center">Creation Date</th>
-					<th scope="col" class="text-center">Type</th>
-					<th scope="col" class="text-center">Motive</th>
-					<th scope="col" class="text-center">Location</th>
-					<th scope="col" class="text-center">Status</th>
-					<th scope="col" class="text-center">Actions</th>
+					<th scope="col" class="text-center" style="border-color: #4682b4;">Id</th>
+					<th scope="col" class="text-center" style="border-color: #4682b4;">Title</th>
+					<th scope="col" class="text-center" style="border-color: #4682b4;">Description</th>
+					<th scope="col" class="text-center" style="border-color: #4682b4;">Author</th>
+					<th scope="col" class="text-center" style="border-color: #4682b4;">Creation Date</th>
+					<th scope="col" class="text-center" style="border-color: #4682b4;">Type</th>
+					<th scope="col" class="text-center" style="border-color: #4682b4;">Motive</th>
+					<th scope="col" class="text-center" style="border-color: #4682b4;">Location</th>
+					<th scope="col" class="text-center" style="border-color: #4682b4;">Status</th>
+					<th scope="col" class="text-center" style="border-color: #4682b4;">Actions</th>
 				</tr>
 			</thead>
 			<tbody>
 				{% for offer in offers %}
 					<tr>
-						<td class="text-center" style="border-color: #5e94b1;">{{ offer.id }}</td>
-						<td style="border-color: #5e94b1;">{{ offer.title }}</td>
-						<td style="border-color: #5e94b1;">{{ offer.description }}</td>
-						<td style="border-color: #5e94b1;">{{ offer.author }}</td>
-						<td style="border-color: #5e94b1;">{{ offer.CreatedAt ? offer.CreatedAt|date('Y-m-d') : '' }}</td>
-						<td style="border-color: #5e94b1;">{{ offer.type }}</td>
-						<td style="border-color: #5e94b1;">{{ offer.motive }}</td>
-						<td style="border-color: #5e94b1;">{{ offer.location }}</td>
-						<td style="border-color: #5e94b1;">{{ offer.status }}</td>
-						<td class="text-center" style="border-color: #5e94b1;">
+						<td class="text-center" style="border-color: #4682b4;">{{ offer.id }}</td>
+						<td style="border-color: #4682b4;">{{ offer.title }}</td>
+						<td style="border-color: #4682b4;">{{ offer.description }}</td>
+						<td style="border-color: #4682b4;">{{ offer.author }}</td>
+						<td style="border-color: #4682b4;">{{ offer.CreatedAt ? offer.CreatedAt|date('Y-m-d') : '' }}</td>
+						<td style="border-color: #4682b4;">{{ offer.type }}</td>
+						<td style="border-color: #4682b4;">{{ offer.motive }}</td>
+						<td style="border-color: #4682b4;">{{ offer.location }}</td>
+						<td style="border-color: #4682b4;">{{ offer.status }}</td>
+						<td class="text-center" style="border-color: #4682b4;">
 							<a href="{{ path('app_offer_edit', {'id': offer.id}) }}" class="btn btn-sm btn-primary">Edit</a>
 							<a href="{{ path('app_offer_delete', {'id': offer.id}) }}" class="btn btn-sm btn-danger">Delete</a>
 							<a href="#" class="btn btn-sm btn-success">Publish</a>
+							<a href="#" class="btn btn-sm btn-pink" style="
+								                                background-color: pink;
+								                                color: white;
+								                                border-color: pink;
+								                            ">Archive</a>
 						</td>
 					</tr>
 				{% else %}
 					<tr>
-						<td colspan="10" class="text-center">No records found</td>
+						<td colspan="10" class="text-center" style="border-color: #4682b4;">No records found</td>
 					</tr>
 				{% endfor %}
 			</tbody>
