--- a/templates/back/base.html.twig
+++ b/templates/back/base.html.twig
@@ -53,11 +53,13 @@
 			<aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main">
 				<div class="sidenav-header">
 					<i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-					<a class="navbar-brand m-0" href=" https://demos.creative-tim.com/argon-dashboard/pages/dashboard.html " target="_blank">
-						<img src="{{asset('back/img/logo-ct-dark.png')}}" class="navbar-brand-img h-100" alt="main_logo">
-						<span class="ms-1 font-weight-bold">Skill SEEKR</span>
-					</a>
+					<!-- Adjust the width of the logo using CSS -->
+					<img
+					src="{{asset('back/img/favicon.png')}}" class="navbar-brand-img" style="width: 150px;" alt="main_logo">
+				<!-- Alternatively, you can add a class to style the logo -->
+
 				</div>
+
 				<hr class="horizontal dark mt-0">
 				<div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
 					<ul class="navbar-nav">
@@ -70,10 +72,10 @@
 							</a>
 							<ul class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdown">
 								<li>
-									<a class="dropdown-item" href="./back/offer/new.html.twig">Add Offer</a>
+									<a class="dropdown-item" href="{{ path('app_offer_new') }}">Add Offer</a>
 								</li>
 								<li>
-									<a class="dropdown-item" href="./back/offer/index.html.twig">Offer List</a>
+									<a class="dropdown-item" href="{{ path('app_offer_index') }}">Offer List</a>
 								</li>
 							</ul>
 						</li>
@@ -202,10 +204,10 @@
 										<script>
 											document.write(new Date().getFullYear())
 										</script>,
-																																																																																																				                made with
+																																																																																																																																												                made with
 										<i class="fa fa-heart"></i>
 										by NOVACODERS 3A39
-																																																																																																				                for Project Integration Unit.
+																																																																																																																																												                for Project Integration Unit.
 									</div>
 								</div>
 								<div class="col-lg-6">
@@ -278,15 +280,8 @@
 			<script src="{{ asset('back/js/plugins/perfect-scrollbar.min.js') }}"></script>
 			<script src="{{ asset('back/js/plugins/smooth-scrollbar.min.js') }}"></script>
 			<script src="{{ asset('back/js/plugins/chartjs.min.js') }}"></script>
-			{# <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-												<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-												<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-												<script>
-													$(function () {
-									$(".datepicker").datepicker();
-									});
-												</script> #}
-
+			<script src="{{'https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js' }}"></script>
+			<script src="{{ asset('js/skills.js') }}"></script>
 
 			<script>
 				var win = navigator.platform.indexOf('Win') > -1;
