--- a/public/back/css/argon-dashboard.css
+++ b/public/back/css/argon-dashboard.css
@@ -4048,7 +4048,7 @@ fieldset:disabled .btn {
 
 .dropdown-toggle::after {
   display: inline-block;
-  margin-left: 0.255em;
+  margin-left: 0.55em;
   vertical-align: 0.255em;
   content: "";
   border-top: 0.3em solid;
@@ -22479,7 +22479,7 @@ hr.horizontal.gray-light {
 .navbar-vertical .navbar-brand>img,
 .navbar-vertical .navbar-brand-img {
   max-width: 100%;
-  max-height: 2rem;
+  max-height: 10rem;
 }
 
 .navbar-vertical .navbar-nav .nav-link {
@@ -23289,7 +23289,10 @@ hr.horizontal.gray-light {
 }
 
 .sidenav-header {
-  height: 4.875rem;
+  height: 10.875rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidenav-footer .card.card-background:after {
