--- a/templates/back/base.html.twig
+++ b/templates/back/base.html.twig
@@ -55,7 +55,7 @@
 					<i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
 					<!-- Adjust the width of the logo using CSS -->
 					<img
-					src="{{asset('back/img/favicon.png')}}" class="navbar-brand-img" style="width: 150px;" alt="main_logo">
+					src="{{asset('back/img/favicon.png')}}" class="navbar-brand-img" alt="main_logo">
 				<!-- Alternatively, you can add a class to style the logo -->
 
 				</div>
@@ -63,21 +63,21 @@
 				<hr class="horizontal dark mt-0">
 				<div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
 					<ul class="navbar-nav">
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+					<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_offer_index') }}">
 								<div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-									<i class="ni ni-calendar-grid-58 text-warning text-sm opacity-10"></i>
+									<i class="ni ni-app text-info text-lg opacity-10"></i>
 								</div>
-								<span class="nav-link-text ms-1">Offers</span>
+								<span class="nav-link-text ms-2">Offers</span>
 							</a>
-							<ul class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdown">
-								<li>
-									<a class="dropdown-item" href="{{ path('app_offer_new') }}">Add Offer</a>
-								</li>
-								<li>
-									<a class="dropdown-item" href="{{ path('app_offer_index') }}">Offer List</a>
-								</li>
-							</ul>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_offer_new') }}">
+								<div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+									<i class="ni ni-app text-info text-lg opacity-10"></i>
+								</div>
+								<span class="nav-link-text ms-2">Create Offer</span>
+							</a>
 						</li>
 					</ul>
 				</div>
@@ -108,12 +108,6 @@
 						<div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
 							<div class="ms-md-auto pe-md-3 d-flex align-items-center"></div>
 							<ul class="navbar-nav  justify-content-end">
-
-								<li class="nav-item px-3 d-flex align-items-center">
-									<a href="javascript:;" class="nav-link text-white p-0">
-										<i class="fa fa-cog fixed-plugin-button-nav cursor-pointer"></i>
-									</a>
-								</li>
 								<li class="nav-item dropdown pe-2 d-flex align-items-center">
 									<a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
 										<i class="fa fa-bell cursor-pointer"></i>
