--- a/templates/back/offer/edit.html.twig
+++ b/templates/back/offer/edit.html.twig
@@ -8,7 +8,10 @@
     <h1 style="font-size: 2.5rem; font-weight: bold; text-align: center; color: white;">Edit Your SKILL Offer</h1>
 
     {{ include('back/offer/_form.html.twig') }}
-    <a href="{{ path('app_offer_index') }}">back to list</a>
+    <div class="row pt-4">
+    <div class="col-md-12"><a href="{{ path('app_offer_index') }}" class="btn btn-success"><i class="fa fa-angle-left" aria-hidden="true">&nbsp;</i>
+back to list</a></div>
+    </div>
     {# <script src="{{'https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js' }}"></script>
     <script src="{{ asset('js/skills.js') }}"></script> #}
 {% endblock %}
