--- a/templates/front/Frontbase.html.twig
+++ b/templates/front/Frontbase.html.twig
@@ -41,15 +41,18 @@
          <!-- Navbar Start -->
             <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
                 <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-                    <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>eLEARNING</h2>
+                    <h2 class="m-0 text-secondary">
+                    <img src="{{asset('front/img/logo.jpeg')}}" width="55" />
+                        SkillSeeker
+                    </h2>
                 </a>
                 <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto p-4 p-lg-0">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="{{ path('front_offers') }}" class="nav-item nav-link active">Offers list</a>
+                        {# <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="courses.html" class="nav-item nav-link">Courses</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -59,17 +62,17 @@
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a> #}
                     </div>
-                    <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
+                    <a href="{{ path('app_offer_index') }}" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Dashboard<i class="fa fa-arrow-right ms-3"></i></a>
                 </div>
             </nav>
             <!-- Navbar End -->
         {% block body %}{% endblock %}
 
            <!-- Footer Start -->
-               <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
-                   <div class="container py-5">
+               <div class="container-fluid bg-dark text-light footer mt-5 wow fadeIn" data-wow-delay="0.1s">
+                   {# <div class="container py-5">
                        <div class="row g-5">
                            <div class="col-lg-3 col-md-6">
                                <h4 class="text-white mb-3">Quick Link</h4>
@@ -123,16 +126,12 @@
                                </div>
                            </div>
                        </div>
-                   </div>
+                   </div> #}
                    <div class="container">
                        <div class="copyright">
                            <div class="row">
                                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                                   &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
-
-                                   <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                                   Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
-                                   Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
+                                   &copy; <a href="#">SkillSeekr</a> 2024, All Right Reserved.
                                </div>
                                <div class="col-md-6 text-center text-md-end">
                                    <div class="footer-menu">
