--- a/templates/front/offer/edit.html.twig
+++ b/templates/front/offer/edit.html.twig
@@ -7,7 +7,10 @@
 
     {{ include('offer/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_offer_index') }}">back to list</a>
+    <div class="row pt-4">
+    <div class="col-md-12"><a href="{{ path('app_offer_index') }}" class="btn btn-success"><i class="fa fa-angle-left" aria-hidden="true">&nbsp;</i>
+back to list</a></div>
+    </div>
 
     {{ include('offer/_delete_form.html.twig') }}
 {% endblock %}
